Update production mailer settings. --skip-ci

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,7 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+  sendgrid_username: <%= ENV["SENDGRID_USERNAME"] %>
+  sendgrid_password: <%= ENV["SENDGRID_PASSWORD"] %>
+  application_target_domain: <%= ENV["APPLICATION_TARGET_DOMAIN"] %>
